--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,7 @@ target 'RNFluidicSlider' do
       if target.name.include?('fluid-slider')
         target.build_configurations.each do |config|
           config.build_settings['SWIFT_VERSION'] = '4.2'
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
         end
       end
     end
