--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '10.0'
-
+ENV['SWIFT_VERSION'] = '4.2'
 target 'RNFluidicSlider' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
